--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -1,57 +1,255 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Students index{% endblock %}
+{% block title %}Liste des étudiants
+{% endblock %}
 
 {% block body %}
-    <h1>Students index</h1>
+	<!-- Page header -->
+	<header class="page-header bg-img" style="background-image: url(assets/img/bg-banner1.jpg);">
+		<div class="container page-name">
+			<h1 class="text-center">Browse resumes</h1>
+			<p class="lead text-center">Filtrer la recherche :</p>
+		</div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>IdStudents</th>
-                <th>Image</th>
-                <th>Name</th>
-                <th>MinDescription</th>
-                <th>Location</th>
-                <th>Website</th>
-                <th>Age</th>
-                <th>PhoneNumber</th>
-                <th>Email</th>
-                <th>CoverImage</th>
-                <th>Facebook</th>
-                <th>Twitter</th>
-                <th>Github</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for student in students %}
-            <tr>
-                <td>{{ student.idStudents }}</td>
-                <td>{{ student.image }}</td>
-                <td>{{ student.name }}</td>
-                <td>{{ student.minDescription }}</td>
-                <td>{{ student.location }}</td>
-                <td>{{ student.website }}</td>
-                <td>{{ student.age }}</td>
-                <td>{{ student.phoneNumber }}</td>
-                <td>{{ student.email }}</td>
-                <td>{{ student.coverImage }}</td>
-                <td>{{ student.facebook }}</td>
-                <td>{{ student.twitter }}</td>
-                <td>{{ student.github }}</td>
-                <td>
-                    <a href="{{ path('students_show', {'idStudents': student.idStudents}) }}">show</a>
-                    <a href="{{ path('students_edit', {'idStudents': student.idStudents}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="14">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+		<div class="container">
+			<form action="#">
 
-    <a href="{{ path('students_new') }}">Create new</a>
-{% endblock %}
+				<div class="row">
+					<div class="form-group col-xs-12 col-sm-4">
+						<input type="text" class="form-control" placeholder="Keyword: name, skills, or tags">
+					</div>
+
+					<div class="form-group col-xs-12 col-sm-4">
+						<input type="text" class="form-control" placeholder="Location: city, state or zip">
+					</div>
+
+					<div class="form-group col-xs-12 col-sm-4">
+						<select class="form-control selectpicker" multiple>
+							<option selected>Toutes les formations</option>
+							<option>Développeur web</option>
+						</select>
+					</div>
+
+
+					<div class="form-group col-xs-12 col-sm-4">
+						<h6>Hourly rate</h6>
+						<div class="checkall-group">
+							<div class="checkbox">
+								<input type="checkbox" id="rate1" name="rate" checked>
+								<label for="rate1">All rates</label>
+							</div>
+
+							<div class="checkbox">
+								<input type="checkbox" id="rate2" name="rate">
+								<label for="rate2">$0 - $50
+									<small>(364)</small>
+								</label>
+							</div>
+
+							<div class="checkbox">
+								<input type="checkbox" id="rate3" name="rate">
+								<label for="rate3">$50 - $100
+									<small>(684)</small>
+								</label>
+							</div>
+
+							<div class="checkbox">
+								<input type="checkbox" id="rate4" name="rate">
+								<label for="rate4">$100 - $200
+									<small>(195)</small>
+								</label>
+							</div>
+
+							<div class="checkbox">
+								<input type="checkbox" id="rate5" name="rate">
+								<label for="rate5">$200+
+									<small>(39)</small>
+								</label>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="form-group col-xs-12 col-sm-4">
+						<h6>Academic degree</h6>
+						<div class="checkall-group">
+							<div class="checkbox">
+								<input type="checkbox" id="degree1" name="degree" checked>
+								<label for="degree1">All degrees</label>
+							</div>
+
+							<div class="checkbox">
+								<input type="checkbox" id="degree2" name="degree">
+								<label for="degree2">Associate degree
+									<small>(216)</small>
+								</label>
+							</div>
+
+							<div class="checkbox">
+								<input type="checkbox" id="degree3" name="degree">
+								<label for="degree3">Bachelor's degree
+									<small>(569)</small>
+								</label>
+							</div>
+
+							<div class="checkbox">
+								<input type="checkbox" id="degree4" name="degree">
+								<label for="degree4">Master's degree
+									<small>(439)</small>
+								</label>
+							</div>
+
+							<div class="checkbox">
+								<input type="checkbox" id="degree5" name="degree">
+								<label for="degree5">Doctoral degree
+									<small>(84)</small>
+								</label>
+							</div>
+						</div>
+					</div>
+
+
+					<div class="form-group col-xs-12 col-sm-4">
+						<h6>Trier par</h6>
+						<div class="radio">
+							<input type="radio" name="sortby" id="sortby1" value="option1" checked>
+							<label for="sortby1">Relevance</label>
+						</div>
+
+						<div class="radio">
+							<input type="radio" name="sortby" id="sortby2" value="option2">
+							<label for="sortby2">Highest rate first</label>
+						</div>
+
+						<div class="radio">
+							<input type="radio" name="sortby" id="sortby3" value="option3">
+							<label for="sortby3">Lowest rate first</label>
+						</div>
+
+						<div class="radio">
+							<input type="radio" name="sortby" id="sortby4" value="option4">
+							<label for="sortby4">Highest degree first</label>
+						</div>
+
+						<div class="radio">
+							<input type="radio" name="sortby" id="sortby5" value="option5">
+							<label for="sortby5">Lowest degree first</label>
+						</div>
+
+					</div>
+
+
+				</div>
+
+				<div class="button-group">
+					<div class="action-buttons">
+						<button class="btn btn-primary">Filtrer</button>
+					</div>
+				</div>
+
+			</form>
+
+		</div>
+
+	</header>
+	<!-- END Page header -->
+
+	<!-- Main container -->
+	<main>
+		<section class="no-padding-top bg-alt">
+			<div class="container">
+				<div class="row">
+
+					<div class="col-xs-12">
+						<br>
+						<h5>
+							<strong>{{students|length}}</strong>
+							résultats trouvés.
+						</h5>
+					</div>
+
+					<!-- Resume detail -->
+					{% for student in students %}
+						<div class="col-xs-12">
+							<a class="item-block" href="{{student.id}}">
+								<header>
+									<img class="resume-avatar" src="assets/img/avatar.jpg" alt="">
+									<div class="hgroup">
+										<h4>{{student.firstname}}
+											{{student.lastname}}</h4>
+										<h5>
+											{{student.age}}
+											ans
+										</h5>
+									</div>
+								</header>
+
+								<div class="item-body">
+									<p>{{student.mindescription}}</p>
+
+									<!--<div class="tag-list">
+																		<span>HTML5</span>
+																		<span>CSS3</span>
+																		<span>Bootstrap</span>
+																		<span>Wordpress</span>
+																		</div>-->
+
+								</div>
+
+								<footer>
+									<ul class="details cols-3">
+										<li>
+											<i class="fa fa-certificate"></i>
+											<span>
+												{% if student.sections %}
+													{{student.sections.firstname}}
+												{% else %}
+													Problème dans la BDD
+												{% endif %}
+											</span>
+										</li>
+
+										<li>
+											<i class="fa fa-map-marker"></i>
+											<span>{{student.location}}</span>
+										</li>
+									</ul>
+								</footer>
+							</a>
+						</div>
+					{% endfor %}
+					<!-- END Resume detail -->
+
+					<!-- Page navigation -->
+					<nav class="text-center">
+						<ul class="pagination">
+							<li>
+								<a href="#" aria-label="Previous">
+									<i class="ti-angle-left"></i>
+								</a>
+							</li>
+							<li>
+								<a href="#">1</a>
+							</li>
+							<li class="active">
+								<a href="#">2</a>
+							</li>
+							<li>
+								<a href="#">3</a>
+							</li>
+							<li>
+								<a href="#">4</a>
+							</li>
+							<li>
+								<a href="#" aria-label="Next">
+									<i class="ti-angle-right"></i>
+								</a>
+							</li>
+						</ul>
+					</nav>
+					<!-- END Page navigation -->
+				</div>
+			</section>
+		</main>
+		<!-- END Main container -->
+	{% endblock %}
