--- a/templates/students/show.html.twig
+++ b/templates/students/show.html.twig
@@ -8,8 +8,8 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>IdStudents</th>
-                <td>{{ student.idStudents }}</td>
+                <th>id</th>
+                <td>{{ student.id }}</td>
             </tr>
             <tr>
                 <th>Image</th>
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <th>Name</th>
-                <td>{{ student.name }}</td>
+                <td>{{ student.firstname }}</td>
             </tr>
             <tr>
                 <th>MinDescription</th>
@@ -49,7 +49,7 @@
             </tr>
             <tr>
                 <th>Facebook</th>
-                <td>{{ student.facebook }}</td>
+                <td>colonne supprimée de la base</td>
             </tr>
             <tr>
                 <th>Twitter</th>
@@ -64,7 +64,7 @@
 
     <a href="{{ path('students_index') }}">back to list</a>
 
-    <a href="{{ path('students_edit', {'idStudents': student.idStudents}) }}">edit</a>
+    <a href="{{ path('students_edit', {'id': student.id}) }}">edit</a>
 
     {{ include('students/_delete_form.html.twig') }}
 {% endblock %}
