feat(engineering) - #14 add summernote js

--- a/templates/offers/_form.html.twig
+++ b/templates/offers/_form.html.twig
@@ -69,7 +69,7 @@
 			<header class="section-header">
 				<span>Description</span>
 				<h2>Détail de l'annonce</h2>
-				<p>Write about your company, job description, skills required, benefits, etc.</p>
+				<p>Description de l'entreprise, de l'emploi proposé, des compétences recherchées... </p>
 			</header>
 
 			{{ form_widget(form.description) }}
@@ -83,13 +83,12 @@
 	<section class="bg-alt">
 		<div class="container">
 			<header class="section-header">
-				<span>Are you done?</span>
-				<h2>Submit Job</h2>
-				<p>Please review your information once more and press the below button to put your job online.</p>
+				<span>Terminé ?</span>
+				<h2>Déposer votre offre!</h2>
 			</header>
 
 			<p class="text-center">
-				<button class="btn btn-success btn-xl btn-round">Submit your job</button>
+				<button class="btn btn-success btn-xl btn-round">Soumettre une annonce</button>
 			</p>
 
 		</div>
@@ -98,3 +97,5 @@
 </main>
 
 {{ form_end(form) }}
+
+
