--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-
-
+        <title>{{ meta_title }}</title>
         {% include "/ressources/meta.html.twig" %}
 
         {% block stylesheets %}{% endblock %}
