--- a/templates/ressources/meta.html.twig
+++ b/templates/ressources/meta.html.twig
@@ -11,4 +11,4 @@
 
 <!-- Favicons -->
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
-<link rel="icon" href="{{ asset('img/favicon.ico') }}">
+<link rel="icon" href="{{ asset('assets/img/favicon.ico') }}">
