--- a/templates/offers/_form.html.twig
+++ b/templates/offers/_form.html.twig
@@ -14,7 +14,7 @@
 			</div>
 
             <div class="form-group col-xs-12">
-                {{ form_widget(form.idSections) }}
+                {{ form_widget(form.sections) }}
             </div>
 
 			<div class="form-group col-xs-12">
