--- a/templates/offers/show.html.twig
+++ b/templates/offers/show.html.twig
@@ -8,8 +8,8 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>IdOffers</th>
-                <td>{{ offer.idOffers }}</td>
+                <th>id</th>
+                <td>{{ offer.id }}</td>
             </tr>
             <tr>
                 <th>Title</th>
@@ -44,7 +44,7 @@
 
     <a href="{{ path('offers_index') }}">back to list</a>
 
-    <a href="{{ path('offers_edit', {'idOffers': offer.idOffers}) }}">edit</a>
+    <a href="{{ path('offers_edit', {'id': offer.id}) }}">edit</a>
 
     {{ include('offers/_delete_form.html.twig') }}
 {% endblock %}
