--- a/templates/businesses/show.html.twig
+++ b/templates/businesses/show.html.twig
@@ -8,8 +8,8 @@
     <table class="table">
         <tbody>
             <tr>
-                <th>IdBusinesses</th>
-                <td>{{ business.idBusinesses }}</td>
+                <th>Id</th>
+                <td>{{ business.id }}</td>
             </tr>
             <tr>
                 <th>Name</th>
@@ -67,16 +67,12 @@
                 <th>Youtube</th>
                 <td>{{ business.youtube }}</td>
             </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ business.description }}</td>
-            </tr>
         </tbody>
     </table>
 
     <a href="{{ path('businesses_index') }}">back to list</a>
 
-    <a href="{{ path('businesses_edit', {'idBusinesses': business.idBusinesses}) }}">edit</a>
+    <a href="{{ path('businesses_edit', {'id': business.id}) }}">edit</a>
 
     {{ include('businesses/_delete_form.html.twig') }}
 {% endblock %}
