--- a/templates/offers/_form.html.twig
+++ b/templates/offers/_form.html.twig
@@ -10,19 +10,35 @@
 
 		<div class="row">
 			<div class="form-group col-xs-12">
-				{{ form_widget(form.title) }}
+
+				{% if not form.vars.valid %}
+					<div class="has-error">
+						{{ form_widget(form.title) }}
+					</div>
+				{% else %}
+					{{ form_widget(form.title) }}
+				{% endif %}
+
+				{{ form_errors(form.title) }}
+
 			</div>
 
-            <div class="form-group col-xs-12">
-                {{ form_widget(form.sections) }}
-            </div>
+			<div class="form-group col-xs-12">
+				{{ form_widget(form.sections) }}
+			</div>
 
 			<div class="form-group col-xs-12">
 				{{ form_widget(form.minDescription) }}
+				<div class="invalid-feedback">
+					{{ form_errors(form.minDescription) }}
+				</div>
 			</div>
 
 			<div class="form-group col-xs-12">
 				{{ form_widget(form.site) }}
+				<div style="color: red">
+					{{ form_errors(form.site) }}
+				</div>
 			</div>
 
 			<div class="form-group col-xs-12 col-sm-6 col-md-6">
@@ -46,30 +62,19 @@
 
 		</div>
 
-		<div class="button-group">
-			<div class="action-buttons">
-				<div class="upload-button">
-					<button class="btn btn-block btn-primary">Choisir une image</button>
-					<input id="cover_img_file" type="file">
-				</div>
-			</div>
-			<div class="action-buttons">
-				<button class="btn btn-success">{{ button_label|default('Save') }}</button>
-			</div>
-		</div>
-
 	</div>
 </header>
 
 <main>
-    <!-- Job detail -->
+	<!-- Job detail -->
 	<section>
 		<div class="container">
 
 			<header class="section-header">
 				<span>Description</span>
 				<h2>Détail de l'annonce</h2>
-				<p>Description de l'entreprise, de l'emploi proposé, des compétences recherchées... </p>
+				<p>Description de l'entreprise, de l'emploi proposé, des compétences recherchées...
+				</p>
 			</header>
 
 			{{ form_widget(form.description) }}
@@ -97,5 +102,3 @@
 </main>
 
 {{ form_end(form) }}
-
-
