--- a/templates/offers/_form.html.twig
+++ b/templates/offers/_form.html.twig
@@ -1,9 +1,10 @@
 {{ form_start(form) }}
 
 <header class="page-header">
+
 	<div class="container page-name">
-		<h1 class="text-center">Ajouter votre annonce</h1>
-		<p class="lead text-center">Create a new vacancy for your company and put it online.</p>
+		<h1 class="text-center">{{ form_title }}</h1>
+		<p class="lead text-center">{{ form_desc }}</p>
 	</div>
 
 	<div class="container">
@@ -11,7 +12,7 @@
 		<div class="row">
 			<div class="form-group col-xs-12">
 
-				{% if not form.vars.valid %}
+				{% if not form.title.vars.valid %}
 					<div class="has-error">
 						{{ form_widget(form.title) }}
 					</div>
@@ -93,7 +94,7 @@
 			</header>
 
 			<p class="text-center">
-				<button class="btn btn-success btn-xl btn-round">Soumettre une annonce</button>
+				<button class="btn btn-success btn-xl btn-round">{{ button_label }}</button>
 			</p>
 
 		</div>
