--- a/templates/offers/edit.html.twig
+++ b/templates/offers/edit.html.twig
@@ -1,13 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Offers{% endblock %}
+{% block stylesheets %}
+	<link rel="stylesheet" type="text/css" href="{{ asset('assets/vendors/summernote/summernote.css') }}">
+{% endblock %}
 
 {% block body %}
-    <h1>Edit Offers</h1>
 
-    {{ include('offers/_form.html.twig', {'button_label': 'Update'}) }}
+	{{ include('offers/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('offers_index') }}">back to list</a>
+{% endblock %}
 
-    {{ include('offers/_delete_form.html.twig') }}
+{% block javascripts %}
+	<script src="{{ asset('assets/vendors/summernote/summernote.js') }}"></script>
 {% endblock %}
