--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -1,47 +1,48 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Offers index{% endblock %}
+{% block title %}Offers index
+{% endblock %}
 
 {% block body %}
-    <h1>Offers index</h1>
+	<h1>Offers index</h1>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>Title</th>
-                <th>MinDescription</th>
-                <th>Site</th>
-                <th>Location</th>
-                <th>HoursWeek</th>
-                <th>Description</th>
-                <th>Statut</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for offer in offers %}
-            <tr>
-                <td>{{ offer.id }}</td>
-                <td>{{ offer.title }}</td>
-                <td>{{ offer.minDescription }}</td>
-                <td>{{ offer.site }}</td>
-                <td>{{ offer.location }}</td>
-                <td>{{ offer.hoursWeek }}</td>
-                <td>{{ offer.description }}</td>
-                <td>{{ offer.statut ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('offers_show', {'id': offer.id}) }}">show</a>
-                    <a href="{{ path('offers_edit', {'id': offer.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+	<table class="table">
+		<thead>
+			<tr>
+				<th>id</th>
+				<th>Title</th>
+				<th>MinDescription</th>
+				<th>Site</th>
+				<th>Location</th>
+				<th>HoursWeek</th>
+				<th>Description</th>
+				<th>Statut</th>
+				<th>actions</th>
+			</tr>
+		</thead>
+		<tbody>
+			{% for offer in offers %}
+				<tr>
+					<td>{{ offer.id }}</td>
+					<td>{{ offer.title }}</td>
+					<td>{{ offer.minDescription }}</td>
+					<td>{{ offer.site }}</td>
+					<td>{{ offer.location }}</td>
+					<td>{{ offer.hoursWeek }}</td>
+					<td>{{ offer.description }}</td>
+					<td>{{ offer.statut ? 'Yes' : 'No' }}</td>
+					<td>
+						<a href="{{ path('offers_show', {'id': offer.id}) }}">show</a>
+						<a href="{{ path('offers_edit', {'id': offer.id}) }}">edit</a>
+					</td>
+				</tr>
+			{% else %}
+				<tr>
+					<td colspan="9">no records found</td>
+				</tr>
+			{% endfor %}
+		</tbody>
+	</table>
 
-    <a href="{{ path('offers_new') }}">Create new</a>
+	<a href="{{ path('offers_new') }}">Create new</a>
 {% endblock %}
