--- a/templates/offers/show.html.twig
+++ b/templates/offers/show.html.twig
@@ -1,50 +1,51 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Offers{% endblock %}
+{% block title %}Offers
+{% endblock %}
 
 {% block body %}
-    <h1>Offers</h1>
+	<h1>Offers</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>id</th>
-                <td>{{ offer.id }}</td>
-            </tr>
-            <tr>
-                <th>Title</th>
-                <td>{{ offer.title }}</td>
-            </tr>
-            <tr>
-                <th>MinDescription</th>
-                <td>{{ offer.minDescription }}</td>
-            </tr>
-            <tr>
-                <th>Site</th>
-                <td>{{ offer.site }}</td>
-            </tr>
-            <tr>
-                <th>Location</th>
-                <td>{{ offer.location }}</td>
-            </tr>
-            <tr>
-                <th>HoursWeek</th>
-                <td>{{ offer.hoursWeek }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ offer.description }}</td>
-            </tr>
-            <tr>
-                <th>Statut</th>
-                <td>{{ offer.statut ? 'Yes' : 'No' }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>id</th>
+				<td>{{ offer.id }}</td>
+			</tr>
+			<tr>
+				<th>Title</th>
+				<td>{{ offer.title }}</td>
+			</tr>
+			<tr>
+				<th>MinDescription</th>
+				<td>{{ offer.minDescription }}</td>
+			</tr>
+			<tr>
+				<th>Site</th>
+				<td>{{ offer.site }}</td>
+			</tr>
+			<tr>
+				<th>Location</th>
+				<td>{{ offer.location }}</td>
+			</tr>
+			<tr>
+				<th>HoursWeek</th>
+				<td>{{ offer.hoursWeek }}</td>
+			</tr>
+			<tr>
+				<th>Description</th>
+				<td>{{ offer.description }}</td>
+			</tr>
+			<tr>
+				<th>Statut</th>
+				<td>{{ offer.statut ? 'Yes' : 'No' }}</td>
+			</tr>
+		</tbody>
+	</table>
 
-    <a href="{{ path('offers_index') }}">back to list</a>
+	<a href="{{ path('offers_index') }}">back to list</a>
 
-    <a href="{{ path('offers_edit', {'id': offer.id}) }}">edit</a>
+	<a href="{{ path('offers_edit', {'id': offer.id}) }}">edit</a>
 
-    {{ include('offers/_delete_form.html.twig') }}
+	{{ include('offers/_delete_form.html.twig') }}
 {% endblock %}
