--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -3,45 +3,74 @@
 {% block title %}Offers index{% endblock %}
 
 {% block body %}
-    <h1>Offers index</h1>
+	<header class="page-header bg-img size-lg" style="background-image: url({{ asset('assets/img/bg-banner1.jpg') }})">
+		<div class="container no-shadow">
+			<h1 class="text-center">Gestion des offres d'emplois</h1>
+			<p class="lead text-center">
+            Voici la liste de vos offres d'emplois.</br>
+            C'est ici que vous pouvez modifier vos annoces, en supprimer ou encore en ajouter de nouvelles.
+            </p>
+		</div>
+	</header>
+	<main>
+		<section class="no-padding-top bg-alt">
+			<div class="container">
+				<div class="row">
+					<div class="col-xs-12 text-right">
+						<br>
+                    	<a href="{{ path('offers_new') }}" class="btn btn-primary btn-sm">Ajouter une offre d'emplois</a>
+					</div>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>id</th>
-                <th>Title</th>
-                <th>MinDescription</th>
-                <th>Site</th>
-                <th>Location</th>
-                <th>HoursWeek</th>
-                <th>Description</th>
-                <th>Statut</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for offer in offers %}
-            <tr>
-                <td>{{ offer.id }}</td>
-                <td>{{ offer.title }}</td>
-                <td>{{ offer.minDescription }}</td>
-                <td>{{ offer.site }}</td>
-                <td>{{ offer.location }}</td>
-                <td>{{ offer.hoursWeek }}</td>
-                <td>{{ offer.description }}</td>
-                <td>{{ offer.statut ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('offers_show', {'id': offer.id}) }}">show</a>
-                    <a href="{{ path('offers_edit', {'id': offer.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+					<!-- Job detail -->
+                    <h5><strong>{{offers|length}}</strong>résultats trouvés.</h5>
+                    {% for offer in offers %}
+                        <div class="col-xs-12">
+                            <div class="item-block">
+                                <header>
+                                    {% if offer.businesses %}
+                                        <a href="{{ path('businesses_show', {'id': offer.businesses.id}) }}"><img src="{{ asset('assets/img/logo-google.jpg') }}" alt=""></a>
+                                    {% else %}
+                                        <img src="{{ asset('assets/img/logo-google.jpg') }}" alt="">
+                                    {% endif %}
+                                    <div class="hgroup">
+                                        <h4>
+                                            <a href="{{ path('offers_show', {'id': offer.id}) }}">{{ offer.title }}</a>
+                                        </h4>
+                                        <h5>
+                                        {% if offer.businesses %}
+                                            <a href="{{ path('businesses_show', {'id': offer.businesses.id}) }}">{{ offer.businesses.name }}</a>
+                                        {% else %}
+                                            <p>Pb de BDD LOL</p>
+                                        {% endif %}
+                                        </h5>
+                                    </div>
+                                    <div class="header-meta">
+                                        <span class="location">{{ offer.location }}</span>
+                                        {% if offer.publishDate %}
+                                        <time>{{ offer.publishDate.date }}</time>
+                                        {% else %}
+                                            no date
+                                        {% endif %}
+                                    </div>
+                                </header>
 
-    <a href="{{ path('offers_new') }}">Create new</a>
+                                <footer>
+                                    <p class="status">
+                                        <strong>Status:</strong>
+                                        {{ offer.statut ? 'Yes' : 'No' }}</p>
+
+                                    <div class="action-btn">
+                                        <a class="btn btn-xs btn-gray" href="{{ path('offers_edit', {'id': offer.id}) }}">Modifier</a>
+                                        <div class="offer-del">{{ include('offers/_delete_form.html.twig') }}</div>
+                                    </div>
+                                </footer>
+                            </div>
+                        </div>
+                    {% else %}
+                        Il n'y a aucune offre d'emploi disponible
+                    {% endfor %}
+				</div>
+			</div>
+		</section>
+	</main>
 {% endblock %}
