--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -17,12 +17,11 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-xs-12 text-right">
-						<br>
+                        <h5>{{offers|length}} résultats trouvés.</h5>
                     	<a href="{{ path('offers_new') }}" class="btn btn-primary btn-sm">Ajouter une offre d'emplois</a>
 					</div>
 
 					<!-- Job detail -->
-                    <h5><strong>{{offers|length}}</strong>résultats trouvés.</h5>
                     {% for offer in offers %}
                         <div class="col-xs-12">
                             <div class="item-block">
@@ -40,16 +39,16 @@
                                         {% if offer.businesses %}
                                             <a href="{{ path('businesses_show', {'id': offer.businesses.id}) }}">{{ offer.businesses.name }}</a>
                                         {% else %}
-                                            <p>Pb de BDD LOL</p>
+                                            attente BDD
                                         {% endif %}
                                         </h5>
                                     </div>
                                     <div class="header-meta">
                                         <span class="location">{{ offer.location }}</span>
                                         {% if offer.publishDate %}
-                                        <time>{{ offer.publishDate.date }}</time>
+                                            <time>Publié le {{ offer.publishDate|date("d/m/Y") }}</time>
                                         {% else %}
-                                            no date
+                                            attente BDD
                                         {% endif %}
                                     </div>
                                 </header>
@@ -57,7 +56,7 @@
                                 <footer>
                                     <p class="status">
                                         <strong>Status:</strong>
-                                        {{ offer.statut ? 'Yes' : 'No' }}</p>
+                                        {{ offer.statut ? 'En cours' : 'En attente de validation' }}</p>
 
                                     <div class="action-btn">
                                         <a class="btn btn-xs btn-gray" href="{{ path('offers_edit', {'id': offer.id}) }}">Modifier</a>
@@ -67,7 +66,7 @@
                             </div>
                         </div>
                     {% else %}
-                        Il n'y a aucune offre d'emploi disponible
+                        Il n'y a aucune offre d'emploi disponible.
                     {% endfor %}
 				</div>
 			</div>
