feat(platform) #13 L'entreprise consulte le profil des apprenants

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{{ meta_title }}</title>
+        <title>test</title>
         {% include "/ressources/meta.html.twig" %}
 
         {% block stylesheets %}{% endblock %}
