--- a/templates/businesses/new.html.twig
+++ b/templates/businesses/new.html.twig
@@ -19,7 +19,7 @@
 
                     <div class="col-xs-12 col-sm-4 col-lg-2">
                         <div class="form-group">
-                            {{ form_widget(form.image) }}
+                            {{ form_widget(form.image, {'attr': {'class': 'dropify'}}) }}
                             {# <input type="file" class="dropify" data-default-file="assets/img/logo-default.png"> #}
                             <span class="help-block">A square logo</span>
                         </div>
