--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -23,31 +23,25 @@
         </div>
         {% endif %}
         <!-- END User account -->
-
+        {% if is_granted('ROLE_APPRENANT') %}
         <!-- Navigation menu -->
         <ul class="nav-menu">
           <li>
-            <a class="active" href="index.html">Home</a>
+            <a class="active" href="index.">Menu Apprenant</a>
             <ul>
               <li><a class="active" href="index.html">Version 1</a></li>
               <li><a href="index-2.html">Version 2</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">Position</a>
+            <a href="#">Menu Apprenant</a>
             <ul>
-              <li><a href="job-list-1.html">Browse jobs - 1</a></li>
-              <li><a href="job-list-2.html">Browse jobs - 2</a></li>
-              <li><a href="job-list-3.html">Browse jobs - 3</a></li>
-              <li><a href="job-detail.html">Job detail</a></li>
-              <li><a href="job-apply.html">Apply for job</a></li>
-              <li><a href="job-add.html">Post a job</a></li>
-              <li><a href="job-manage.html">Manage jobs</a></li>
-              <li><a href="job-candidates.html">Candidates</a></li>
+              <li><a href="javascript:;">Browse jobs - 1</a></li>
+              <li><a href="javascript:;">Browse jobs - 2</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">Resume</a>
+            <a href="#">Menu Apprenant</a>
             <ul>
               <li><a href="resume-list.html">Browse resumes</a></li>
               <li><a href="resume-detail.html">Resume detail</a></li>
@@ -56,7 +50,7 @@
             </ul>
           </li>
           <li>
-            <a href="#">Company</a>
+            <a href="#">Menu Apprenant</a>
             <ul>
               <li><a href="company-list.html">Browse companies</a></li>
               <li><a href="company-detail.html">Company detail</a></li>
@@ -65,19 +59,51 @@
             </ul>
           </li>
           <li>
-            <a href="#">Pages</a>
-            <ul>
-              <li><a href="page-blog.html">Blog</a></li>
-              <li><a href="page-post.html">Blog-post</a></li>
-              <li><a href="page-about.html">About</a></li>
-              <li><a href="page-contact.html">Contact</a></li>
-              <li><a href="page-faq.html">FAQ</a></li>
-              <li><a href="page-pricing.html">Pricing</a></li>
-              <li><a href="page-typography.html">Typography</a></li>
-              <li><a href="page-ui-elements.html">UI elements</a></li>
-            </ul>
+            <a href="javascript:;">Mon profil</a>
           </li>
         </ul>
         <!-- END Navigation menu -->
+        {% endif %}
+        {% if is_granted('ROLE_BUSINESSES') %}
+        <!-- Navigation menu -->
+        <ul class="nav-menu">
+          <li>
+            <a class="active" href="index.">Menu Businesses</a>
+            <ul>
+              <li><a class="active" href="index.html">Version 1</a></li>
+              <li><a href="index-2.html">Version 2</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Menu Businesses</a>
+            <ul>
+              <li><a href="javascript:;">Browse jobs - 1</a></li>
+              <li><a href="javascript:;">Browse jobs - 2</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Menu Businesses</a>
+            <ul>
+              <li><a href="resume-list.html">Browse resumes</a></li>
+              <li><a href="resume-detail.html">Resume detail</a></li>
+              <li><a href="resume-add.html">Create a resume</a></li>
+              <li><a href="resume-manage.html">Manage resumes</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#">Menu Businesses</a>
+            <ul>
+              <li><a href="company-list.html">Browse companies</a></li>
+              <li><a href="company-detail.html">Company detail</a></li>
+              <li><a href="company-add.html">Create a company</a></li>
+              <li><a href="company-manage.html">Manage companies</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="javascript:;">Mon profil</a>
+          </li>
+        </ul>
+        <!-- END Navigation menu -->
+        {% endif %}
 
       </div>
