--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -202,7 +202,7 @@
 											<i class="fa fa-certificate"></i>
 											<span>
 												{% if student.sections %}
-													{{student.sections.firstname}}
+													{{student.sections.name}}
 												{% else %}
 													Problème dans la BDD
 												{% endif %}
