feat(engineering):#12 student update or check his profil

--- a/templates/students/edit.html.twig
+++ b/templates/students/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Students{% endblock %}
 
 {% block body %}
-    <h1>Edit Students</h1>
-
-    {{ include('students/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('students_index') }}">back to list</a>
-
-    {{ include('students/_delete_form.html.twig') }}
+  <!-- Page header -->
+  <header class="page-header">
+    <div class="container page-name">
+      <h1>Edit Students</h1>
+      {{ include('students/_form.html.twig', {'button_label': 'Update'}) }}
+    </div>
+  </header>
 {% endblock %}
