feat(platform) #73 Upload des images (students)

--- a/templates/students/index.html.twig
+++ b/templates/students/index.html.twig
@@ -223,6 +223,7 @@
 									</ul>
 								</footer>
 							</a>
+							<a href="{{ asset('uploads/images/' ~ student.image) }}">Photo de profil</a>
 						</div>
 					{% endfor %}
 					<!-- END Resume detail -->
@@ -253,7 +254,6 @@
 
 								</a>
 							</div>
-						{% endfor %}
 						<!-- END Resume detail -->
 
 						<!-- Page navigation -->
