feat(platform) : #72 intégration footer

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,11 @@
 .offer-del {
     display: inline-block; 
 }
+.social-icons {
+    a.mail:hover {
+        background-color: #517fa4;
+    }
+    a.phone:hover {
+        background-color: #4F805D;
+    }
+}
