--- a/templates/ressources/navbar.html.twig
+++ b/templates/ressources/navbar.html.twig
@@ -5,8 +5,8 @@
           <a class="navbar-toggle" href="#" data-toggle="offcanvas"><i class="ti-menu"></i></a>
 
           <div class="logo-wrapper">
-            <a class="logo" href="index.html"><img src="{{ asset('assets/img/logo.png') }}" alt="logo"></a>
-            <a class="logo-alt" href="index.html"><img src="{{ asset('assets/img/logo-alt.png') }}" alt="logo-alt"></a>
+            <a class="logo" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo.png') }} #}" alt="logo"></a>
+            <a class="logo-alt" href="{{ path("home") }}"><img src="https://www.cfa.cci.nc/themes/custom/cci/src/img/logo-cci-color-header.png {# {{ asset('assets/img/logo-alt.png') }} #}" alt="logo-alt"></a>
           </div>
 
         </div>
@@ -27,39 +27,31 @@
         <!-- Navigation menu -->
         <ul class="nav-menu">
           <li>
-            <a class="active" href="index.">Menu Apprenant</a>
+            <a href="javascript:;">Les Entreprises</a>
             <ul>
-              <li><a class="active" href="index.html">Version 1</a></li>
-              <li><a href="index-2.html">Version 2</a></li>
+              <li><a href="resume-list.html">lien de sous-menu</a></li>
+              <li><a href="resume-detail.html">lien de sous-menu</a></li>
+              <li><a href="resume-add.html">lien de sous-menu</a></li>
+              <li><a href="resume-manage.html">lien de sous-menu</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">Menu Apprenant</a>
+            <a href="javascript:;">Offres d'emploi</a>
             <ul>
-              <li><a href="javascript:;">Browse jobs - 1</a></li>
-              <li><a href="javascript:;">Browse jobs - 2</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">Menu Apprenant</a>
-            <ul>
-              <li><a href="resume-list.html">Browse resumes</a></li>
-              <li><a href="resume-detail.html">Resume detail</a></li>
-              <li><a href="resume-add.html">Create a resume</a></li>
-              <li><a href="resume-manage.html">Manage resumes</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#">Menu Apprenant</a>
-            <ul>
-              <li><a href="company-list.html">Browse companies</a></li>
-              <li><a href="company-detail.html">Company detail</a></li>
-              <li><a href="company-add.html">Create a company</a></li>
-              <li><a href="company-manage.html">Manage companies</a></li>
+              <li><a href="company-list.html">lien de sous-menu</a></li>
+              <li><a href="company-detail.html">lien de sous-menu</a></li>
+              <li><a href="company-add.html">lien de sous-menu</a></li>
+              <li><a href="company-manage.html">lien de sous-menu</a></li>
             </ul>
           </li>
           <li>
             <a href="javascript:;">Mon profil</a>
+            <ul>
+              <li><a href="company-list.html">Créér mon CV</a></li>
+              <li><a href="company-detail.html">lien de sous-menu</a></li>
+              <li><a href="company-add.html">lien de sous-menu</a></li>
+              <li><a href="company-manage.html">lien de sous-menu</a></li>
+            </ul>
           </li>
         </ul>
         <!-- END Navigation menu -->
@@ -68,39 +60,31 @@
         <!-- Navigation menu -->
         <ul class="nav-menu">
           <li>
-            <a class="active" href="index.">Menu Businesses</a>
+            <a href="javascript:;">Les Apprenants</a>
             <ul>
-              <li><a class="active" href="index.html">Version 1</a></li>
-              <li><a href="index-2.html">Version 2</a></li>
+              <li><a href="company-list.html">lien de sous-menu</a></li>
+              <li><a href="company-detail.html">lien de sous-menu</a></li>
+              <li><a href="company-add.html">lien de sous-menu</a></li>
+              <li><a href="company-manage.html">lien de sous-menu</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">Menu Businesses</a>
+            <a href="javascript:;">Mes offres d'emploi</a>
             <ul>
-              <li><a href="javascript:;">Browse jobs - 1</a></li>
-              <li><a href="javascript:;">Browse jobs - 2</a></li>
+              <li><a href="company-list.html">lien de sous-menu</a></li>
+              <li><a href="company-detail.html">lien de sous-menu</a></li>
+              <li><a href="company-add.html">lien de sous-menu</a></li>
+              <li><a href="company-manage.html">lien de sous-menu</a></li>
             </ul>
           </li>
           <li>
-            <a href="#">Menu Businesses</a>
+            <a href="javascript:;">Mon Entreprise</a>
             <ul>
-              <li><a href="resume-list.html">Browse resumes</a></li>
-              <li><a href="resume-detail.html">Resume detail</a></li>
-              <li><a href="resume-add.html">Create a resume</a></li>
-              <li><a href="resume-manage.html">Manage resumes</a></li>
+              <li><a href="company-list.html">lien de sous-menu</a></li>
+              <li><a href="company-detail.html">lien de sous-menu</a></li>
+              <li><a href="company-add.html">lien de sous-menu</a></li>
+              <li><a href="company-manage.html">lien de sous-menu</a></li>
             </ul>
-          </li>
-          <li>
-            <a href="#">Menu Businesses</a>
-            <ul>
-              <li><a href="company-list.html">Browse companies</a></li>
-              <li><a href="company-detail.html">Company detail</a></li>
-              <li><a href="company-add.html">Create a company</a></li>
-              <li><a href="company-manage.html">Manage companies</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="javascript:;">Mon profil</a>
           </li>
         </ul>
         <!-- END Navigation menu -->
