--- a/templates/ressources/footer.html.twig
+++ b/templates/ressources/footer.html.twig
@@ -1,54 +1,66 @@
 <!-- Top section -->
-      <div class="container">
-        <div class="row">
-          <div class="col-sm-12 col-md-6">
-            <h6>About</h6>
-            <p class="text-justify">An employment website is a web site that deals specifically with employment or careers. Many employment websites are designed to allow employers to post job requirements for a position to be filled and are commonly known as job boards. Other employment sites offer employer reviews, career and job-search advice, and describe different job descriptions or employers. Through a job website a prospective employee can locate and fill out a job application.</p>
-          </div>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-12 col-md-6">
+      <h6>Contact</h6>
+      <p class="text-justify">
+      CCI Formation Alternance NOUMEA<br/>
+      Immeuble Journot<br/>
+      14 rue de Verdun<br/>
+      BP M3 98849 NOUMEA Cedex<br/>
+      Nouvelle-Calédonie
+      </p>
+      <p><i class="fa fa-phone"></i> Téléphone : <a class="phone" href="tel:+687243145">(+687) 24 31 45</a></p>
+    </div>
 
-          <div class="col-xs-6 col-md-3">
-            <h6>Company</h6>
-            <ul class="footer-links">
-              <li><a href="page-about.html">About us</a></li>
-              <li><a href="page-typography.html">How it works</a></li>
-              <li><a href="page-faq.html">Help center</a></li>
-              <li><a href="page-typography.html">Privacy policy</a></li>
-              <li><a href="page-contact.html">Contact us</a></li>
-            </ul>
-          </div>
+    <div class="col-xs-6 col-md-3">
+      <h6>La CCI</h6>
+      <ul class="footer-links">
+        <li><a href="page-about.html">A propos de nous</a></li>
+        <li><a href="page-typography.html">L'alternace comment ça marche</a></li>
+        <li><a href="page-faq.html">Le point A</a></li>
+      </ul>
+    </div>
 
-          <div class="col-xs-6 col-md-3">
-            <h6>Trendeing jobs</h6>
-            <ul class="footer-links">
-              <li><a href="job-list.html">Front-end developer</a></li>
-              <li><a href="job-list.html">Android developer</a></li>
-              <li><a href="job-list.html">iOS developer</a></li>
-              <li><a href="job-list.html">Full stack developer</a></li>
-              <li><a href="job-list.html">Project administrator</a></li>
-            </ul>
-          </div>
-        </div>
+    
+    <div class="col-xs-6 col-md-3">
+    {% if is_granted('ROLE_APPRENANT') %}
+      <h6>Alternants</h6>
+      <ul class="footer-links">
+        <li><a href="javascript:;">Mon profil</a></li>
+        <li><a href="javascript:;">Offres d'emploi</a></li>
+        <li><a href="javascript:;">Les Entreprises</a></li>
+      </ul>
+    {% endif %}
+    {% if is_granted('ROLE_BUSINESSES') %}
+      <h6>Entreprises</h6>
+      <ul class="footer-links">
+        <li><a href="javascript:;">Mon Entreprise</a></li>
+        <li><a href="javascript:;">Mes offres d'emploi</a></li>
+        <li><a href="javascript:;">Les Apprenants</a></li>
+      </ul>
+    {% endif %}
+    </div>
+  </div>
+  <hr>
+</div>
+<!-- END Top section -->
 
-        <hr>
-      </div>
-      <!-- END Top section -->
+<!-- Bottom section -->
+<div class="container">
+  <div class="row">
+    <div class="col-md-8 col-sm-6 col-xs-12">
+      <p class="copyright-text">Copyrights &copy; 2019 Tous droits réservés au <a href="https://www.cfa.cci.nc/">CFA</a>.</p>
+    </div>
 
-      <!-- Bottom section -->
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-sm-6 col-xs-12">
-            <p class="copyright-text">Copyrights &copy; 2017 All Rights Reserved by <a href="http://themeforest.net/user/thethemeio">TheThemeio</a>.</p>
-          </div>
-
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <ul class="social-icons">
-              <li><a class="facebook" href="#"><i class="fa fa-facebook"></i></a></li>
-              <li><a class="twitter" href="#"><i class="fa fa-twitter"></i></a></li>
-              <li><a class="dribbble" href="#"><i class="fa fa-dribbble"></i></a></li>
-              <li><a class="linkedin" href="#"><i class="fa fa-linkedin"></i></a></li>
-              <li><a class="instagram" href="#"><i class="fa fa-instagram"></i></a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <!-- END Bottom section -->
+    <div class="col-md-4 col-sm-6 col-xs-12">
+      <ul class="social-icons">
+        <li><a class="facebook" href="https://www.facebook.com/cciformationalternancenouvellecaledonie/"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="linkedin" href="https://www.linkedin.com/company/chambre-de-commerce-et-d%27industrie-de-nouvelle-cal-donie/"><i class="fa fa-linkedin"></i></a></li>
+        <li><a class="mail" href="mailto:cfa@cci.nc"><i class="fa fa-envelope"></i></a></li>
+        <li><a class="phone" href="tel:+687243145"><i class="fa fa-phone"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</div>
+<!-- END Bottom section -->
