feat(security) : #86 update offers error

--- a/templates/form/form_errors.html.twig
+++ b/templates/form/form_errors.html.twig
@@ -1,6 +1,6 @@
 {% block form_errors %}
     {% for error in errors %}
-        <div class="form-group has-error pl-3">
+        <div class="form-group has-error">
             <label class="control-label">{{ error.message }}</label>
         </div>
     {% endfor %}
