fix(database) : #88 fix db form

--- a/templates/businesses/index.html.twig
+++ b/templates/businesses/index.html.twig
@@ -11,7 +11,7 @@
                 <th>Id</th>
                 <th>Name</th>
                 <th>Slogan</th>
-                <th>MinDescription</th>
+                <th>Description</th>
                 <th>Image</th>
                 <th>Location</th>
                 <th>NbEmployees</th>
@@ -32,7 +32,7 @@
                 <td>{{ business.id }}</td>
                 <td>{{ business.name }}</td>
                 <td>{{ business.slogan }}</td>
-                <td>{{ business.minDescription }}</td>
+                <td>{{ business.description }}</td>
                 <td>{{ business.image }}</td>
                 <td>{{ business.location }}</td>
                 <td>{{ business.nbEmployees }}</td>
