--- a/templates/businesses/student.html.twig
+++ b/templates/businesses/student.html.twig
@@ -16,7 +16,7 @@
 					<div class="hgroup">
 						<h1>{{student.firstname}}
 							{{student.lastname}}</h1>
-						<h3>{{student.sections.name}}</h3>
+						<h3>{{student.section.name}}</h3>
 					</div>
 					<hr>
 					<p class="lead">{{student.mindescription}}</p>
