--- a/templates/businesses/_form.html.twig
+++ b/templates/businesses/_form.html.twig
@@ -25,7 +25,7 @@
                         </div>
 
                         <div class="form-group">
-                            {{ form_widget(form.minDescription) }}
+                            {{ form_widget(form.description) }}
                         </div>
                     </div>
                 </div>
