--- a/templates/businesses/new.html.twig
+++ b/templates/businesses/new.html.twig
@@ -29,7 +29,7 @@
                         </div>
 
                         <div class="form-group">
-                            {{ form_widget(form.minDescription) }}
+                            {{ form_widget(form.description) }}
                         </div>
                     </div>
                 </div>
