--- a/templates/businesses/students.html.twig
+++ b/templates/businesses/students.html.twig
@@ -208,8 +208,8 @@
 											<li>
 												<i class="fa fa-certificate"></i>
 												<span>
-													{% if student.sections %}
-														{{student.sections.name}}
+													{% if student.section %}
+														{{student.section.name}}
 													{% else %}
 														Problème dans la BDD (pas censé être null)
 													{% endif %}
