--- a/templates/offers/index.html.twig
+++ b/templates/offers/index.html.twig
@@ -25,8 +25,8 @@
                         <div class="col-xs-12">
                             <div class="item-block">
                                 <header>
-                                    {% if offer.businesses %}
-                                        <a href="{{ path('businesses_show', {'id': offer.businesses.id}) }}"><img src="{{ asset('assets/img/logo-google.jpg') }}" alt=""></a>
+                                    {% if offer.business %}
+                                        <a href="{{ path('businesses_show', {'id': offer.business.id}) }}"><img src="{{ asset('assets/img/logo-google.jpg') }}" alt=""></a>
                                     {% else %}
                                         <img src="{{ asset('assets/img/logo-google.jpg') }}" alt="">
                                     {% endif %}
@@ -35,8 +35,8 @@
                                             <a href="{{ path('offers_show', {'id': offer.id}) }}">{{ offer.title }}</a>
                                         </h4>
                                         <h5>
-                                        {% if offer.businesses %}
-                                            <a href="{{ path('businesses_show', {'id': offer.businesses.id}) }}">{{ offer.businesses.name }}</a>
+                                        {% if offer.business %}
+                                            <a href="{{ path('businesses_show', {'id': offer.business.id}) }}">{{ offer.business.name }}</a>
                                         {% else %}
                                             attente BDD
                                         {% endif %}
